FE implemented for Cell name search